# smoltalk

./: README.md  pyproject.toml  requirements.txt  toolbox.py
src/smoltalk/: openairouter.py  toolbox.py
